--- a/.github/workflows/R7800_Lite.yml
+++ b/.github/workflows/R7800_Lite.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/ACwifidude/openwrt
+  REPO_BRANCH: kernel5.10-nss-qsdk11.0
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: LEDE-R7800-Lite.config
   DIY_P1_SH: diy-part1.sh
