--- a/LEDE-Newifi3-d2.config
+++ b/LEDE-Newifi3-d2.config
@@ -90,7 +90,8 @@ CONFIG_PACKAGE_kmod-usb3=y
 #挂在硬盘格式
 CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_antfs-mount=y
+
+# CONFIG_PACKAGE_antfs-mount is not set
 CONFIG_PACKAGE_kmod-fs-antfs=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ntfs=y
