--- a/linksys.config
+++ b/linksys.config
@@ -50,7 +50,7 @@ CONFIG_PACKAGE_kmod-usb-wdm=y
 #挂在硬盘格式
 CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_antfs-mount=y
+# CONFIG_PACKAGE_antfs-mount is not set
 CONFIG_PACKAGE_kmod-fs-antfs=y
 
 CONFIG_PACKAGE_luci-app-diskman=y
