--- a/LEDE-R7800-AP.config
+++ b/LEDE-R7800-AP.config
@@ -47,6 +47,10 @@ CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-net-sr9700=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
 
+
+# CONFIG_PACKAGE_kmod-qca-nss-gmac is not set
+
+
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
