--- a/LEDE-R7800-Lite.config
+++ b/LEDE-R7800-Lite.config
@@ -47,7 +47,7 @@ CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-net-sr9700=y
 CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
-
+# CONFIG_PACKAGE_kmod-qca-nss-gmac is not set
 
 
 CONFIG_PACKAGE_luci-app-diskman=y
