--- a/linksys.config
+++ b/linksys.config
@@ -47,6 +47,7 @@ CONFIG_PACKAGE_kmod-usb-net-sr9700=y
 CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
 
+# CONFIG_PACKAGE_kmod-qca-nss-gmac is not set
 #挂在硬盘格式
 CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
