--- a/LEDE-R7800-5.15Test.config
+++ b/LEDE-R7800-5.15Test.config
@@ -16,6 +16,9 @@ CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh_Hans=y
 
+#5.15测试内核开关
+CONFIG_TESTING_KERNEL=y
+
 
 #通用配置ipv6
 # CONFIG_PACKAGE_dnsmasq 未设置
