--- a/LEDE-R7800-5.15Test.config
+++ b/LEDE-R7800-5.15Test.config
@@ -35,7 +35,6 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_6rd=y
 CONFIG_PACKAGE_6to4=y
 
-
 #挂在硬盘格式
 CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
@@ -139,7 +138,7 @@ CONFIG_PACKAGE_luci-app-dnsfilter=y
 # CONFIG_PACKAGE_luci-app-easymesh is not set
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
-CONFIG_PACKAGE_luci-app-ntpc=y
+# CONFIG_PACKAGE_luci-app-ntpc is not set
 CONFIG_PACKAGE_luci-app-ddns=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-openclash=y
