--- a/LEDE-R7800-5.15Test.config
+++ b/LEDE-R7800-5.15Test.config
@@ -21,7 +21,7 @@ CONFIG_LUCI_LANG_zh_Hans=y
 
 
 #通用配置ipv6
-# CONFIG_PACKAGE_dnsmasq 未设置
+# CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
@@ -39,7 +39,7 @@ CONFIG_PACKAGE_6to4=y
 CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
 
-# CONFIG_PACKAGE_antfs-mount 未设置
+# CONFIG_PACKAGE_antfs-mount is not set
 CONFIG_PACKAGE_kmod-fs-antfs=y
 CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ntfs=y
