--- a/LEDE-R7800-5.15Test.config
+++ b/LEDE-R7800-5.15Test.config
@@ -40,14 +40,29 @@ CONFIG_PACKAGE_autoshare-samba=y
 CONFIG_PACKAGE_automount=y
 
 
-# CONFIG_PACKAGE_antfs-mount is not set
-CONFIG_PACKAGE_kmod-fs-antfs=y
+
+
+CONFIG_DEFAULT_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-fs-afs is not set
 CONFIG_PACKAGE_kmod-fs-exfat=y
-CONFIG_PACKAGE_kmod-fs-ntfs=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
-CONFIG_PACKAGE_kmod-fs-exportfs=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_kmod-fs-ksmbd=y
+CONFIG_PACKAGE_kmod-fs-ntfs3-oot=y
+	
+
+
+
+
+
+
+
+# CONFIG_PACKAGE_antfs-mount is not set
+CONFIG_PACKAGE_kmod-fs-antfs=m
+
+CONFIG_PACKAGE_kmod-fs-ntfs=m
+CONFIG_PACKAGE_kmod-fs-vfat=m
+CONFIG_PACKAGE_kmod-fs-exportfs=m
+
+CONFIG_PACKAGE_kmod-fs-ksmbd=m
 # CONFIG_PACKAGE_kmod-fs-nfs-common is not set
 # CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec is not set
 # CONFIG_PACKAGE_kmod-fs-nfsd is not set
