--- a/LEDE-K2p.config
+++ b/LEDE-K2p.config
@@ -15,7 +15,7 @@ CONFIG_LIBCURL_PROXY=y
 
 CONFIG_PACKAGE_hostapd-common=y
 
-
+CONFIG_TESTING_KERNEL=y
 
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 # CONFIG_PACKAGE_nlbwmon is not set
@@ -146,7 +146,7 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # CONFIG_PACKAGE_kmod-usb3 is not set
 
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-easymesh=y
+#CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 #多播
 CONFIG_PACKAGE_luci-app-syncdial=y
@@ -158,18 +158,18 @@ CONFIG_PACKAGE_luci-app-mwan3=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-ntpc=y
 # CONFIG_PACKAGE_luci-app-openclash is not set
-CONFIG_PACKAGE_luci-app-qos=y
+#CONFIG_PACKAGE_luci-app-qos=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 # CONFIG_PACKAGE_luci-app-sqm is not set
 
 CONFIG_PACKAGE_luci-app-ddns=y
 
-CONFIG_PACKAGE_luci-app-dnsfilter=y
+#CONFIG_PACKAGE_luci-app-dnsfilter=y
 
 
 
 #passwall科学
-CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall=y
 
 #ssrplus科学未集成
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
